--- a/Cadastro do Usuario/style.css
+++ b/Cadastro do Usuario/style.css
@@ -63,6 +63,7 @@
             height: 30%;
             background-color: #302D2E;
             color: #fff;
+            
     
         }
     
@@ -102,8 +103,9 @@
         height: 50px;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
-        gap: 200px;
+        justify-content: space-around;
        
             a{
                 background-color: #4D4D4F;
@@ -111,7 +113,6 @@
                 white-space: nowrap;
                 color: #fff;
                 height: 20px;
-                width: 20px;
             }
         
             #paints{
