Conclusão dos Sliders
    organização do código
    separação do css do portfolio
    Implementação dos Sliders
    modificação no footer

--- a/Cadastro do Usuario/css/portfolio.css
+++ b/Cadastro do Usuario/css/portfolio.css
@@ -1,3 +1,19 @@
+body {
+    background-color: #B4A2A4;
+}
+
+/*
+    
+$$\   $$\                           $$\                     
+$$ |  $$ |                          $$ |                    
+$$ |  $$ | $$$$$$\   $$$$$$\   $$$$$$$ | $$$$$$\   $$$$$$\  
+$$$$$$$$ |$$  __$$\  \____$$\ $$  __$$ |$$  __$$\ $$  __$$\ 
+$$  __$$ |$$$$$$$$ | $$$$$$$ |$$ /  $$ |$$$$$$$$ |$$ |  \__|
+$$ |  $$ |$$   ____|$$  __$$ |$$ |  $$ |$$   ____|$$ |      
+$$ |  $$ |\$$$$$$$\ \$$$$$$$ |\$$$$$$$ |\$$$$$$$\ $$ |      
+\__|  \__| \_______| \_______| \_______| \_______|\__|      
+    
+*/
 header {
     width: 100%;
     height:auto;
@@ -105,6 +121,21 @@ header footer {
     height: auto;
 }
 
+/*
+
+$$$$$$$\                  $$\           
+$$  __$$\                 $$ |          
+$$ |  $$ | $$$$$$\   $$$$$$$ |$$\   $$\ 
+$$$$$$$\ |$$  __$$\ $$  __$$ |$$ |  $$ |
+$$  __$$\ $$ /  $$ |$$ /  $$ |$$ |  $$ |
+$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |
+$$$$$$$  |\$$$$$$  |\$$$$$$$ |\$$$$$$$ |
+\_______/  \______/  \_______| \____$$ |
+                              $$\   $$ |
+                              \$$$$$$  |
+                               \______/ 
+
+*/
 /*body*/
 #user-bio{
     width: 90%;
@@ -137,11 +168,18 @@ header footer {
 
 #profile-img {
     background-color: gray;
-    width: 125px;
+    width: 115spx;
     height: 115px;
     border-radius: 100%;
     margin-left: 5px;
     margin-top: 5px;
+
+    img{
+        width: inherit;
+        height: inherit;
+        border-radius: inherit;
+        
+    }
 }
 
 #profile-text {
@@ -214,6 +252,21 @@ header footer {
     }
 }
 
+/*
+
+$$\      $$\                 $$\           $$\         $$\   
+$$$\    $$$ |                $$ |          $$ |      $$$$ |  
+$$$$\  $$$$ | $$$$$$\   $$$$$$$ | $$$$$$\  $$ |      \_$$ |  
+$$\$$\$$ $$ |$$  __$$\ $$  __$$ | \____$$\ $$ |        $$ |  
+$$ \$$$  $$ |$$ /  $$ |$$ /  $$ | $$$$$$$ |$$ |        $$ |  
+$$ |\$  /$$ |$$ |  $$ |$$ |  $$ |$$  __$$ |$$ |        $$ |  
+$$ | \_/ $$ |\$$$$$$  |\$$$$$$$ |\$$$$$$$ |$$ |      $$$$$$\ 
+\__|     \__| \______/  \_______| \_______|\__|      \______|
+
+*/
+ /*inserir o codigo do modal 1 aqui*/
+ 
+/*=-=-=-=-=-=-=-=-=-=-==-=-=-=-=-=-=-=-==-=-*/
 #links-text {
     display: flex;
     flex-direction: row;
@@ -235,6 +288,18 @@ header footer {
     }
 }
 
+/*
+
+$$\      $$\                 $$\           $$\        $$$$$$\  
+$$$\    $$$ |                $$ |          $$ |      $$  __$$\ 
+$$$$\  $$$$ | $$$$$$\   $$$$$$$ | $$$$$$\  $$ |      \__/  $$ |
+$$\$$\$$ $$ |$$  __$$\ $$  __$$ | \____$$\ $$ |       $$$$$$  |
+$$ \$$$  $$ |$$ /  $$ |$$ /  $$ | $$$$$$$ |$$ |      $$  ____/ 
+$$ |\$  /$$ |$$ |  $$ |$$ |  $$ |$$  __$$ |$$ |      $$ |      
+$$ | \_/ $$ |\$$$$$$  |\$$$$$$$ |\$$$$$$$ |$$ |      $$$$$$$$\ 
+\__|     \__| \______/  \_______| \_______|\__|      \________|
+                                                               
+*/
 /*Modal dos links do artista */
 /*Background do modal*/
 .modal {
@@ -311,6 +376,18 @@ header footer {
 }
 /*Fim do body do modal*/
 
+/*
+        
+ $$$$$$\            $$\                                  $$$$$$\             $$\     $$\             $$\               
+$$  __$$\           $$ |                                $$  __$$\            $$ |    \__|            $$ |              
+$$ /  \__| $$$$$$\  $$$$$$$\   $$$$$$\   $$$$$$\        $$ /  $$ | $$$$$$\ $$$$$$\   $$\  $$$$$$$\ $$$$$$\    $$$$$$\  
+\$$$$$$\  $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\       $$$$$$$$ |$$  __$$\\_$$  _|  $$ |$$  _____|\_$$  _|   \____$$\ 
+ \____$$\ $$ /  $$ |$$ |  $$ |$$ |  \__|$$$$$$$$ |      $$  __$$ |$$ |  \__| $$ |    $$ |\$$$$$$\    $$ |     $$$$$$$ |
+$$\   $$ |$$ |  $$ |$$ |  $$ |$$ |      $$   ____|      $$ |  $$ |$$ |       $$ |$$\ $$ | \____$$\   $$ |$$\ $$  __$$ |
+\$$$$$$  |\$$$$$$  |$$$$$$$  |$$ |      \$$$$$$$\       $$ |  $$ |$$ |       \$$$$  |$$ |$$$$$$$  |  \$$$$  |\$$$$$$$ |
+ \______/  \______/ \_______/ \__|       \_______|      \__|  \__|\__|        \____/ \__|\_______/    \____/  \_______|
+                                                                                                                       
+*/
 /*biografia do usuário*/
 #user-bio-text {
     background-color: white;
@@ -333,7 +410,7 @@ header footer {
 
     #profile-rating-stars {
         background-color: #fff;
-        margin-top: 10px;
+        margin-top: 35px;
 
         h3, p {
             background-color: #fff;
@@ -432,13 +509,26 @@ header footer {
 
     #profile-rating-stats {
         background-color: #fff;
-        margin-bottom: 10px;
+        margin-bottom: 35px;
 
         h3, p, b {
             background-color: #fff;
         }
     }
 }
+
+/*
+
+ /$$$$$$$$                    /$$                        
+| $$_____/                   | $$                        
+| $$     /$$$$$$   /$$$$$$  /$$$$$$    /$$$$$$   /$$$$$$ 
+| $$$$$ /$$__  $$ /$$__  $$|_  $$_/   /$$__  $$ /$$__  $$
+| $$__/| $$  \ $$| $$  \ $$  | $$    | $$$$$$$$| $$  \__/
+| $$   | $$  | $$| $$  | $$  | $$ /$$| $$_____/| $$      
+| $$   |  $$$$$$/|  $$$$$$/  |  $$$$/|  $$$$$$$| $$      
+|__/    \______/  \______/    \___/   \_______/|__/      
+                                                        
+*/
 
 #body-footer {
     background-color: #302D2E;
@@ -464,8 +554,8 @@ header footer {
             display: flex;
             align-self: center;
             border-bottom-style: solid;
-            padding: 0 0 10px 0;
-            
+            padding: 10px 100px 10px 100px;
+            color: #fff;
         }
 
         #footer-about-links {
@@ -482,9 +572,20 @@ header footer {
     #footer-help {
         display: flex;
         align-items: center;
+        color: #fff;
     }
 
     #footer-help {
         margin-right: 10%;
+        padding: 0 0 0 10%;
+
+        a{
+            color: #fff;
+            text-decoration: underline;
+        }
+
+        a:hover{
+            color: #B4A2A4;
+        }
     }
 }
