Conclusão da página de portfolio
    Renomeei arquivo JS dos modais
    criei o modal para as opções compartilhar e denunciar

--- a/Cadastro do Usuario/css/glider.style.css
+++ b/Cadastro do Usuario/css/glider.style.css
@@ -97,6 +97,10 @@ body {
     text-decoration: none;
 }
 
+.product-title:hover {
+    text-decoration: underline;
+}
+
 .price-buy {
     display: flex;
     justify-content: space-between;
