--- a/Cadastro do Usuario/css/portfolio.css
+++ b/Cadastro do Usuario/css/portfolio.css
@@ -264,8 +264,41 @@ $$ | \_/ $$ |\$$$$$$  |\$$$$$$$ |\$$$$$$$ |$$ |      $$$$$$\
 \__|     \__| \______/  \_______| \_______|\__|      \______|
 
 */
- /*inserir o codigo do modal 1 aqui*/
- 
+.menuModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.menu-modal-content {
+    position: relative;
+    background-color: #302D2E;
+    margin: 15% auto;
+    padding: 0;
+    border: 1px solid #464646;
+    width: 20%; /* Could be more or less, depending on screen size */
+    height: auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+
+    div{
+        display: flex;
+        flex-direction: column;
+
+        button{
+            padding: 10px;
+            margin: 10px;
+            font-weight: 600;
+        }
+    }
+}
+
 /*=-=-=-=-=-=-=-=-=-=-==-=-=-=-=-=-=-=-==-=-*/
 #links-text {
     display: flex;
@@ -285,6 +318,10 @@ $$ | \_/ $$ |\$$$$$$  |\$$$$$$$ |\$$$$$$$ |$$ |      $$$$$$\
     border: none;
     cursor: pointer;
     background-color: #fff;
+    }
+
+    #linkBtn:hover {
+        text-decoration: underline;
     }
 }
 
