Indenpedencia do style.css

--- a/Cadastro do Usuario/style.css
+++ b/Cadastro do Usuario/style.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    /*background-color: #B4A2A4;*/
+    background-color: #B4A2A4;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     }
     
