--- a/Cadastro do Usuario/css/portfolio.css
+++ b/Cadastro do Usuario/css/portfolio.css
@@ -1,3 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
 body {
     background-color: #B4A2A4;
 }
@@ -119,6 +125,29 @@ img{
 header footer {
     background-color: #4D4D4F;
     height: auto;
+}
+
+body > header footer nav{
+    background-color: #4D4D4F;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+   
+        a{
+            background-color: #4D4D4F;
+            text-decoration: none;
+            white-space: nowrap;
+            color: #fff;
+            height: 20px;
+        }
+    
+        #paints{
+            margin-left: 30px;
+        }
+
 }
 
 /*
